add authentication to swagger ui
