# docs/swagger.json
@@ -45,8 +45,13 @@
                 }
             }
         },
-        "/{table}": {
+        "/sql/{table}": {
             "get": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "description": "Find all data by statement parameter",
                 "consumes": [
                     "application/json"
@@ -85,6 +90,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "where condition query sql",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "limit per page",
                         "name": "pageSize",
@@ -107,13 +118,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/utils.BaseWrapperModel"
                         }
                     }
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "description": "Insert data by column name in format JSON",
                 "consumes": [
                     "application/json"
@@ -148,15 +163,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/utils.BaseWrapperModel"
                         }
                     }
                 }
             }
         },
-        "/{table}/{id}": {
+        "/sql/{table}/{id}": {
             "put": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "description": "Update data by ID (primary key) and data by column name in format JSON",
                 "consumes": [
                     "application/json"
@@ -198,13 +217,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/utils.BaseWrapperModel"
                         }
                     }
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "Authorization": []
+                    }
+                ],
                 "description": "Delete data by ID (primary key)",
                 "consumes": [
                     "application/json"
@@ -236,12 +259,35 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/utils.BaseWrapperModel"
                         }
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "utils.BaseWrapperModel": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Authorization": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
